# arueshalae

./: .gitignore  .prettierrc.json  AGENTS.md  Cargo.toml  build-userscript.ts  build.rs  build_userscript.js  justfile  package-lock.json  package.json  readme.md  tsconfig.json
assets/userscript/: api.ts  favorites.ts  fetcher.ts  index.ts  post.ts  post_list.ts  rule34.d.ts  styles.css  styles.ts
src/: database.rs  main.rs  media_processor.rs  search.rs  server.rs  upload.rs
src/downloader/: api.rs  database.rs  image_file.rs  media_processor.rs  mod.rs  worker.rs
src/migrations/: 202507262345-init.sql  202507311227-tags-view.sql  202508291609-init.sql
src/ui/: Post.tsx  Posts.tsx  app.ts  app.tsx  context.d.ts  index.ts  posts.tsx  router.ts  router.tsx  styles.css
src/ui/api/: Pagination.tsx  hooks.ts  network.ts  post.ts  posts.ts  user.ts
src/ui/captcha/: detection.ts  index.ts  modal.tsx
src/ui/components/: CaptchaModal.tsx
src/ui/posts/: Posts.tsx
src/userscript/: api.ts  context.d.ts  downloader.ts  favorites.ts  fetcher.ts  gallery.ts  index.ts  network.ts  post-list.ts  post.ts  post_list.ts  rule34.d.ts  search-box.ts  styles.css  styles.ts  sync.ts
src/userscript-legacy/: context.d.ts  favorites.ts  index.ts  network.ts  pool.ts  post-list.ts  styles.css  styles.ts  sync.ts
src/userscript-legacy/components/: FavoritesSearch.ts  FavoritesSearchResult.ts  SearchEnhancements.ts
src/userscript/components/: FavoriteButton.ts  FavoritesBar.ts  (+3 more)
src/web/: database.rs  mod.rs  models.rs  routes.rs  style.css
templates/: base.html  index.html
